fixed a few variables